where-for-dinner/spaces-beta1-deployment/routes/k8sGatewayRoutes.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: where-for-dinner-scg-route
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: default-gateway
    sectionName: http-<hostname>
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: spring-cloud-gateway
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
